# docker-poetry-env

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: aws.yml
docker/: Dockerfile  docker-compose.yml
