[tool.poetry]
name = "docker-poetry-env"
version = "0.1.0"
description = ""
authors = ["azupero_adolph <azupero.adolph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
jupyterlab = "^2.2.9"
streamlit = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
